# ml-automation-framework

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
.claude/: .gitignore  settings.json  settings.md
.claude/agents/: ml-reviewer.md
.claude/commands/: evaluate.md  train.md
.claude/skills/databricks-patterns/: SKILL.md
.claude/skills/feature-engineering/: SKILL.md
.claude/skills/ml-pipeline-patterns/: SKILL.md
configs/classification/: catboost_example.yaml  example_churn.yaml
configs/forecasting/: example_sales.yaml  many_model_demand.yaml
docs/: MANUAL_TEST_GUIDE.md  index.md  mkdocs.yml
docs/developer-guide/: adding-models.md  adding-transformers.md  api-reference.md  architecture.md
docs/user-guide/: classification.md  cli-reference.md  configuration.md  forecasting.md  getting-started.md
notebooks/: 01_quickstart.ipynb
src/ml_framework/: __init__.py  cli.py  data_quality.py  exceptions.py
src/ml_framework/config/: __init__.py  base.py  deployment.py  explainability.py  loader.py  tuning.py  validation.py
src/ml_framework/data/: __init__.py  spark_loader.py
src/ml_framework/deployment/: __init__.py  base.py  databricks.py
src/ml_framework/evaluation/: __init__.py  backtesting.py  cross_validation.py  metrics.py
src/ml_framework/explainability/: __init__.py  shap_explainer.py
src/ml_framework/features/: __init__.py  transformer.py
src/ml_framework/logging/: __init__.py  mlflow_logger.py
src/ml_framework/models/: __init__.py  factory.py  foundation.py  registry.py
src/ml_framework/pipelines/: __init__.py  base.py  classification.py  forecasting.py  many_model.py
src/ml_framework/tuning/: __init__.py  optuna_tuner.py
src/ml_framework/utils/: __init__.py  runtime.py
src/ml_framework/validation/: __init__.py  ge_validator.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_cli_evaluate.py  test_cli_train.py
tests/manual/: generate_data.py
tests/manual/configs/: test_full_pipeline.yaml  test_shap.yaml  test_train_basic.yaml  test_tuning.yaml  test_validation.yaml  test_validation_bad.yaml
tests/manual/data/: churn_bad_data.parquet  churn_test.parquet  churn_train.csv  churn_train.parquet
tests/unit/: test_catboost.py  test_config.py  test_transformer.py
